@startuml

class AddBudgetCommand {
#validate(model : Model)
#execute(model : Model) : CommandResult
}

abstract class UndoableCommand

AddBudgetCommand -up-|> UndoableCommand
AddBudgetCommand -right-> "1" Budget: toAdd
AddBudgetCommand ..> Model
AddBudgetCommand ..> CommandResult
AddBudgetCommand .left.> CommandException: throws

@enduml
